# MyPaper

./: CMakeLists.txt  README.md  Settings.qml  main.cpp  photobackend.cpp  photobackend.h  resources.qrc  utils.cpp  utils.h
client/: CMakeLists.txt  Main.qml  README.md  Settings.qml  photobackend.cpp  photobackend.h  settingsbackend.cpp  settingsbackend.h  systemtray.cpp  systemtray.h  utils.cpp
client/icons/: MyPaper.icns
server/: CMakeLists.txt  README.md  copy_so.sh  image_controller.cpp  image_controller.h  main.cpp  paper_server.cpp  paper_server.h  token_store.cpp  token_store.h
